examples/syntax_error/commentar.u



/*
*
*
* /

void main(int i)
{
	putint(10);
}


